--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "start:mock": "run-s convert-openapi mock-api",
     "start": "run-p -r start:mock start:app",
     "openapi": "openapi-generator-cli generate",
+    "test:jest": "jest --config ./jest.config.js",
     "test": "stencil test --spec --e2e",
     "test.watch": "stencil test --spec --e2e --watchAll",
     "generate": "stencil generate"
@@ -36,8 +37,12 @@
     "axios": "^1.6.0"
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.24.0",
+    "@openapitools/openapi-generator-cli": "^2.10.0",
     "@types/jest": "^29.5.6",
     "@types/node": "^16.18.11",
+    "axios-mock-adapter": "^1.22.0",
+    "babel-jest": "^29.7.0",
     "jest": "^29.7.0",
     "jest-cli": "^29.7.0",
     "js-yaml": "^4.1.0",
